--- a/calculator.html
+++ b/calculator.html
@@ -5,6 +5,7 @@
     Number:
     <input type="text" id="n1">
     <p>
+        <button onclick="inverse()"> 1/x </button>
         <button onclick="square()"> x^2 </button>
     </p>
 
@@ -13,6 +14,10 @@
 				var num = document.getElementById("n1");
 				num.value = Math.pow(num.value, 2);
 	}
+    function inverse() {
+				var num = document.getElementById("n1");
+				num.value = 1/num.value;
+			}
 </script>
 </body>
 </html>
