--- a/calculator.html
+++ b/calculator.html
@@ -5,18 +5,13 @@
     Number:
     <input type="text" id="n1">
     <p>
-        <button onclick="inverse()"> 1/x </button>
-        <button onclick="square()"> x^2 </button>
+        <button onclick="cube()"> x^3 </button>
     </p>
 
     <script type="text/javascript">
-    function square() {
+    function cube() {
 				var num = document.getElementById("n1");
-				num.value = Math.pow(num.value, 2);
-	}
-    function inverse() {
-				var num = document.getElementById("n1");
-				num.value = 1/num.value;
+				num.value = Math.pow(num.value, 3);
 			}
 </script>
 </body>
