--- a/calculator.html
+++ b/calculator.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-    <h1>Integracion 1/x, x^2</h1>
+    <h1>Elena</h1>
     Number:
     <input type="text" id="n1">
     <p>
